Created phong light model

--- a/Render/Render.csproj
+++ b/Render/Render.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Materials\DiffuseMaterial.cs" />
     <Compile Include="Materials\MaterialType.cs" />
+    <Compile Include="Materials\MirrorMaterial.cs" />
     <Compile Include="Materials\SpecularMaterial.cs" />
     <Compile Include="Primitives\Triangle.cs" />
     <Compile Include="Ray.cs" />
