Added light square

--- a/Render/Render.csproj
+++ b/Render/Render.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Primitives\Plane.cs" />
     <Compile Include="Primitives\Sphere.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\LightSquare.cs" />
     <Compile Include="Scene\Scene.cs" />
   </ItemGroup>
   <ItemGroup>
